--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,8 @@
+/* Colors */
+$dark-grey: #363333;
+$light-grey: #948f8f;
+$light-red: #bf3a30;
+$blue: #4b7cfb;
 /* Global style */
 * {
   margin: 0;
@@ -30,8 +35,8 @@ img {
   text-align: center;
 }
 .btn {
-  color: inherit;
-  background-color: #4b7cfb;
+  color: white;
+  background-color: $blue;
   cursor: pointer;
   border-radius: 10px;
 }
@@ -45,7 +50,7 @@ img {
   justify-content: space-between;
 }
 .card {
-  background-color: #363333;
+  background-color: $dark-grey;
   border-radius: 30px;
   padding: 2em;
   margin-top: 2em;
@@ -94,7 +99,7 @@ img {
   margin: auto;
   flex-direction: column;
   align-items: center;
-  background-color: #363333;
+  background-color: $dark-grey;
   padding: 5rem;
   width: 80vw;
   height: fit-content;
@@ -108,22 +113,19 @@ img {
     font-weight: bold;
     font-size: medium;
     &--save {
-      border: none;
-      font-weight: 600;
-      font-style: italic;
       color: white;
     }
     &--delete {
-      background-color: #363333;
-      color: #bf3a30;
-      border: solid 1px #bf3a30;
+      background-color: $dark-grey;
+      color: $light-red;
+      border: solid 1px $light-red;
     }
   }
 }
 .input-div {
   position: relative;
   &__input {
-    background-color: #948f8f;
+    background-color: $light-grey;
     color: white;
     border-radius: 15px;
     padding: 5px;
@@ -155,7 +157,6 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    justify-items: center;
     border-radius: 50%;
     width: 150px;
     height: 150px;
